--- a/iOS/Localizable.xcstrings
+++ b/iOS/Localizable.xcstrings
@@ -177,6 +177,38 @@
         }
       }
     },
+    "artist.albums" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Alben"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Albums"
+          }
+        }
+      }
+    },
+    "artist.empty" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "needs_review",
+            "value" : "Keine Alben gefunden"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "No albums available"
+          }
+        }
+      }
+    },
     "artist.view" : {
       "localizations" : {
         "de" : {
