Fix album download status

--- a/iOS/Localizable.xcstrings
+++ b/iOS/Localizable.xcstrings
@@ -258,6 +258,7 @@
       }
     },
     "developedBy" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
