Improve playlist view

--- a/iOS/Localizable.xcstrings
+++ b/iOS/Localizable.xcstrings
@@ -723,6 +723,22 @@
         }
       }
     },
+    "playlist.remove" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Aus der Playlist entfernen"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Remove from playlist"
+          }
+        }
+      }
+    },
     "playlist.trackCount %lld" : {
       "localizations" : {
         "de" : {
