Update group identifier

--- a/iOS/Localizable.xcstrings
+++ b/iOS/Localizable.xcstrings
@@ -274,6 +274,7 @@
       }
     },
     "developedBy" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
