--- a/iOS/Localizable.xcstrings
+++ b/iOS/Localizable.xcstrings
@@ -306,6 +306,7 @@
       }
     },
     "developedBy" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
