--- a/iOS/Localizable.xcstrings
+++ b/iOS/Localizable.xcstrings
@@ -273,6 +273,9 @@
         }
       }
     },
+    "ascending" : {
+
+    },
     "cancel" : {
       "localizations" : {
         "de" : {
@@ -306,7 +309,6 @@
       }
     },
     "developedBy" : {
-      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
