--- a/iOS/Localizable.xcstrings
+++ b/iOS/Localizable.xcstrings
@@ -149,7 +149,7 @@
       "localizations" : {
         "de" : {
           "stringUnit" : {
-            "state" : "needs_review",
+            "state" : "translated",
             "value" : "Einstellungen"
           }
         },
@@ -274,7 +274,20 @@
       }
     },
     "ascending" : {
-
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Aufsteigend"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ascending"
+          }
+        }
+      }
     },
     "cancel" : {
       "localizations" : {
@@ -445,7 +458,7 @@
               "one" : {
                 "stringUnit" : {
                   "state" : "translated",
-                  "value" : "%lld Stunde"
+                  "value" : "Eine Stunde"
                 }
               },
               "other" : {
@@ -463,7 +476,7 @@
               "one" : {
                 "stringUnit" : {
                   "state" : "translated",
-                  "value" : "%lld hour"
+                  "value" : "one hour"
                 }
               },
               "other" : {
@@ -710,7 +723,7 @@
               "one" : {
                 "stringUnit" : {
                   "state" : "translated",
-                  "value" : "%lld Minute"
+                  "value" : "Eine Minute"
                 }
               },
               "other" : {
@@ -728,7 +741,7 @@
               "one" : {
                 "stringUnit" : {
                   "state" : "translated",
-                  "value" : "%lld minute"
+                  "value" : "one minute"
                 }
               },
               "other" : {
@@ -1006,7 +1019,7 @@
               "one" : {
                 "stringUnit" : {
                   "state" : "translated",
-                  "value" : "%lld Song"
+                  "value" : "one song"
                 }
               },
               "other" : {
@@ -1024,7 +1037,7 @@
               "one" : {
                 "stringUnit" : {
                   "state" : "translated",
-                  "value" : "%lld track"
+                  "value" : "one track"
                 }
               },
               "other" : {
