--- a/tvOS/Localizable.xcstrings
+++ b/tvOS/Localizable.xcstrings
@@ -225,6 +225,9 @@
         }
       }
     },
+    "playback.empty" : {
+
+    },
     "playlist.duration %@" : {
       "localizations" : {
         "de" : {
