--- a/iOS/Localizable.xcstrings
+++ b/iOS/Localizable.xcstrings
@@ -322,6 +322,7 @@
       }
     },
     "developedBy" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
